# Diffusion-Model-Predictive-Synthesis-Planning

./: .env.example  .gitignore  CLAUDE.md  DMPSP.md  LICENSE  PAPER.md  Proejct rules.md  README.md  ROADMAP.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: data.yaml  model.yaml  train.yaml
data/: __init__.py  dataset.py  loader.py  preprocess.py
dmpsp/: __init__.py  action_proposal.py  diffusion.py  encoder.py  planner.py  scorer.py  state.py  utils.py  value_fn.py  world_model.py
notebooks/: 01_train_kaggle.ipynb  02_demo.ipynb
scripts/: benchmark.py  evaluate.py  plan_route.py  prepare_data.py
tests/: test_diffusion.py  test_models.py  test_planner.py  test_scorer.py  test_state.py
train/: __init__.py  train_proposal.py  train_value.py  train_world_model.py
